# IA-CAR

./: netlify.toml  package.json  pyproject.toml  requirements.txt
netlify/functions/: __init__.py
netlify/functions/detect_vehicle/: detect_vehicle.py  requirements.txt
netlify/functions/test/: test.py
public/: index.html
