[tool.poetry]
name = "car-detection-api"
version = "0.1.0"
description = "Car Detection API for Netlify"
authors = ["Jowlin"]

[tool.poetry.dependencies]
python = "^3.8"
easyocr = "1.6.2"
torch = "1.13.1"
Pillow = "9.5.0"
requests = "2.28.2"
transformers = "4.30.2"
numpy = "1.23.5"
python-multipart = "0.0.6"
python-json-logger = "2.0.7"
protobuf = "3.20.3"
opencv-python-headless = "4.7.0.72"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
